--- a/analysis/HR_Score.Rmd
+++ b/analysis/HR_Score.Rmd
@@ -20,7 +20,7 @@ CSV file has some requirements:
 2.  Replicates should be suffixed with "-1", "-2" or "-3"
 
 ```{r}
-data_file <- "data/2021-12-23-cell_death-2(1).csv"
+data_file <- "../data/2021-12-23-cell_death-2(1).csv"
 data <- read_csv(data_file)
 data
 ```
